Improvements after feedback from BR

--- a/courseplan/courseplan.tex
+++ b/courseplan/courseplan.tex
@@ -71,7 +71,7 @@
     }
 
     \item[Datorlaborationer]
-    Onsdagar (15--17), torsdagar (10--12, 13--15 eller 15-17) eller fredagar (10--12 eller 15--17) beroende på grupptillhörighet. Den första laborationen för de första grupperna är onsdag 4/9. Laborationsuppgifterna finns i häftet ''Datorlaborationer, Datorer och datoranvändning''. Observera att laborationerna inleds med en kontrollskrivning som du måste klara för att du ska få delta i laborationen, så du måste förbereda dig inför laborationen genom att läsa igenom uppgiften och göra förberedelserna listade under rubriken ''Hemarbete'' samt se till att du kan svara på frågorna under rubriken ''Kontrollfrågor''.
+    Onsdagar (15--17), torsdagar (10--12, 13--15 eller 15-17) eller fredagar (10--12 eller 15--17) beroende på grupptillhörighet. Den första laborationen för de första grupperna är onsdag 4/9. Laborationsuppgifterna finns i häftet ''Datorlaborationer, Datorer och datoranvändning''. Observera att laborationerna inleds med en kontrollskrivning som du måste klara för att du ska få delta i laborationen, så du måste förbereda dig inför laborationen genom att läsa igenom uppgiften och göra förberedelserna listade under rubriken ''Obligatoriska förberedelser (hemarbete)'' samt se till att du kan svara på frågorna under rubriken ''Kontrollfrågor''.
 
     Gruppindelningen för laborationerna är densamma som i kursen EDAA45 Programmering, grundkurs. Om du inte läser EDAA45 parallellt, och alltså inte är inplacerad i en grupp, så kontakta kursansvarig via mail (\url{mattias.nordahl@cs.lth.se}) med önskemål om passande laborationstid så kommer du att bli tilldelad en plats i en av grupperna. Vi gör vårt bästa men kan inte fullt ut garantera att du kan laborera den önskade tiden.
 
