--- a/lab-instructions/dodlabs.tex
+++ b/lab-instructions/dodlabs.tex
@@ -68,7 +68,7 @@
 \newcommand{\progfilename}{c3pu.jar}
 
 % Define the hint command
-\newcommand{\hint}[2][]{\par\halfblankline\textbf{Hint\ifx#1\empty\else\space#1\fi}: #2\par}
+\newcommand{\hint}[2][]{\par\halfblankline\noindent\textbf{Ledtråd\ifx#1\empty\else\space#1\fi}: #2\par}
 
 \lstset{
 	escapeinside={(*@}{@*)},
@@ -99,15 +99,17 @@ Datorlaborationerna ger exempel på tillämpningar av det material som behandlas
 
 	\item Uppgifterna i laborationerna ska lösas individuellt. Regler för samarbete finns på nästa sida.
 
-	\item Varje laboration består av två delar: hemarbete och datorarbete. Innan du kommer till laborationen ska du ha förberett dig genom att ha gjort uppgifterna som markerats som hemarbete, samt läst igenom vad som står under datorarbete. Du ska också ha gått igenom kontrollfrågorna.
+	\item Varje laboration består av två delar: förberedelser (hemarbete) och datorarbete. Innan du kommer till laborationen ska du ha förberett dig genom att ha gjort uppgifterna som markerats som förberedelser, samt läst igenom vad som står under datorarbete. Du ska också ha gått igenom kontrollfrågorna.
 
 	\item Om du hittar någonting i uppgifterna eller andra anvisningar som är felaktigt eller oklart så är vi tacksamma om du meddelar dina synpunkter till \url{mattias.nordahl@cs.lth.se}.
 
 	      %\item  Du måste för varje laboration se till att laborationsledaren noterar dig som godkänd på listan på sista sidan i detta häfte.
 
-	\item I början av varje laboration kommer laborationsledaren att kontrollera att du har förberett dig. Kontrollen görs genom att du får en skrivning med fyra frågor som valts bland kontrollfrågorna. Du måste besvara minst tre av frågorna korrekt för att du ska få genomföra laborationen.
+	\item I början av varje laboration kommer laborationsledaren att kontrollera att du har förberett dig. Kontrollen görs genom att du får svara på några frågor som valts bland kontrollfrågorna. Om du uppenbart inte har förberett dig så har laborationsledaren rätt att be dig att förbereda dig och komma tillbaka vid ett senare tillfälle.
+	
+	\item \emph{Förtydligande av förberedelsekontrollen}: Kontrollen är inte menad att vara svår, utan syftar till att se att du har gjort en insats för att gå igenom det förberedande materialet, så att du kan få ut så mycket som möjligt av laborationen och laborationsledaren.
 
-	\item Observera att laborationerna inte syftar till att testa er, utan är ett inlärningsmoment! Under laborationerna får ni ta hjälp av allt kursmaterial eller andra resurser för att lösa uppgifterna.
+	\item Observera att laborationerna inte syftar till att testa er, utan är ett inlärningsmoment! Under laborationerna får ni ta hjälp av allt kursmaterial eller andra resurser för att lösa uppgifterna. Ta också hjälp av laborationsledaren om ni fastnar eller behöver hjälp.
 
 	\item Svaren till kontrollfrågorna kommer att finnas i laborationshandledningen eller i annat material som delas ut eller hänvisas till. Du kommer också behöva tänka eller reflektera själv med utgångspunkt från materialet.
 \end{itemize}
