--- a/lab-instructions/modules/__old/internet_inuti.tex
+++ b/lab-instructions/modules/__old/internet_inuti.tex
@@ -4,7 +4,7 @@
 %Mål: Du ska med hjälp av olika Unix-program studera hur Internet fungerar ''inuti''. Laborationen ger en orientering om fundamentala Internetprotokoll som Telnet, HTTP och SMTP samt visar hur data finner vägen genom nätet.
 %
 %
-%\subsection*{Hemarbete}
+%\subsection*{Obligatoriska förberedelser (hemarbete)}
 %\begin{Hemarbete}
 %\item Läs noga igenom hela laborationen. Du bör därefter kunna svara på en del av frågorna i texten. De övriga frågorna ska du svara på under laborationen.
 %\item Läs igenom avsnittet om e-post (2.5) i kompendiet Introduktion till LTH:s Unixdatorer. 
