--- a/lab-instructions/modules/__old/low_lvl_prog.tex
+++ b/lab-instructions/modules/__old/low_lvl_prog.tex
@@ -4,7 +4,7 @@
 %\emph{Mål:	} Du ska lära dig grunderna i hur en dator fungerar på maskinspråksnivå och träna på att skriva små program i assemblerpråk.
 %
 %
-%\subsection*{Hemarbete}
+%\subsection*{Obligatoriska förberedelser (hemarbete)}
 %\begin{Hemarbete}
 %\item Titta igenom föreläsningsbilderna till veckans föreläsning. 
 %\item Läs igenom häftet ''ME -- en dator''. Om du inte har förkunskaper i programmering behöver du inte läsa igenom avsnitt 2.2 och 2.3; de avsnitten är överkurs.
