--- a/lab-instructions/modules/__old/matlab.tex
+++ b/lab-instructions/modules/__old/matlab.tex
@@ -6,7 +6,7 @@
 %Lunds Universitet har avtal med MathWorks så att studenter har gratis tillgång till Matlab. Du kan ladda hem Matlab till din egen dator från \url{http://program.ddg.lth.se}. Alternativt kan du använda Octave, \url{www.octave.org}.
 %
 %
-%\subsection*{Hemarbete}
+%\subsection*{Obligatoriska förberedelser (hemarbete)}
 %\begin{Hemarbete}
 %\item Läs igenom föreläsningsbilderna till veckans föreläsning. Det finns gott om Matlab-introduktioner på webben; leta själv om du är intresserad. 
 %\item \label{hem:ekvsyst} Lös (för hand) följande ekvationssystem:
