--- a/lab-instructions/modules/__old/teckenkodning.tex
+++ b/lab-instructions/modules/__old/teckenkodning.tex
@@ -3,7 +3,7 @@
 %\section{Laboration \arabic{section} --- Datarepresentation: teckenkodning}
 %\emph{Mål:} Du ska praktiskt få bekanta dig med olika sätt att representera data, särskilt data i textform, samt arbeta med dessa olika former av datarepresentation. Detta illustrerar att betydelsen av de bitmönster som lagras i datorns minne är helt beroende på hur vi som programmerare väljer att tolka dem och ger en mycket praktisk insikt i det problem just bristen på standardisering för teckenkodning ger upphov till.
 %
-%\subsection*{Hemarbete}
+%\subsection*{Obligatoriska förberedelser (hemarbete)}
 %\begin{Hemarbete}
 %\item Läs noga igenom hela laborationen samt repetera innehållet ur föreläsningsbilderna från föreläsningen om teckenrepresentation.
 %\item Läs översiktligt igenom wikipediasidorna för de teckenkodningsstandarder för vilka det finns länkar på kurshemsidans laborationssida:
