--- a/lab-instructions/modules/git/git.tex
+++ b/lab-instructions/modules/git/git.tex
@@ -2,7 +2,7 @@
 
 \emph{Mål:} Du ska bekanta dig med grundläggande tekniker för versionshantering och att arbeta flera personer i samma utvecklingsprojekt med hjälp av Git och GitHub. Laborationen kommer att utgöra en guidad tur genom ett enkelt användningsfall. Syftet är alltså inte att bli experter, utan att få se och senare kunna känna igen kommandon och få en känsla för arbetssättet.
 
-\subsection*{Hemarbete}
+\subsection*{Obligatoriska förberedelser (hemarbete)}
 \begin{Hemarbete}\firmlist
 	\item Titta igenom föreläsningsbilderna från föreläsning 2 (versionshantering med Git och GitHub).
 	\item Läs igenom \emph{Appendix G Versionshantering och kodlagring} i \emph{Introduktion till programmering med Scala} av Björn Regnell.
