--- a/lab-instructions/modules/latex/latex.tex
+++ b/lab-instructions/modules/latex/latex.tex
@@ -3,7 +3,7 @@
 \emph{Mål:} Du ska lära dig grunderna i \LaTeX och tillämpa dina kunskaper på ett exempel.
 
 
-\subsection*{Hemarbete}
+\subsection*{Obligatoriska förberedelser (hemarbete)}
 \begin{Hemarbete}\firmlist
 	\item Titta igenom föreläsningsbilderna till föreläsningen om \LaTeX.
 	\item Läs igenom kompendiet \emph{Att skriva rapporter med \LaTeX}, åtminstone så mycket så att du blir bekant med vad man kan göra med \LaTeX. Du behöver inte försöka memorera alla detaljer.
