--- a/lab-instructions/modules/unix/unix_terminal.tex
+++ b/lab-instructions/modules/unix/unix_terminal.tex
@@ -3,7 +3,7 @@
 \emph{Mål:} Du ska bekanta dig med att använda LTHs Linuxdatorer. Du blir inte expert på Linux (eller Unix) på en laboration, och det behöver du inte heller vara. Men det är viktigt att du är van att arbeta med Linux (och därmed även Unix); det kommer att underlätta dina studier i fortsättningen.
 
 
-\subsection*{Hemarbete}
+\subsection*{Obligatoriska förberedelser (hemarbete)}
 \begin{Hemarbete}
 	\item Läs igenom \emph{Appendix B Terminalfönster} i \emph{Introduktion till programmering med Scala} av Björn Regnell.
 	\item Läs igenom kompendiet  \emph{Introduktion till LTH:s Linuxdatorer}. Kompendiet är tämligen långt, så börja i god tid. Laborationen innefattar ungefär det som finns i kapitel 1 (Grunderna) och 2 (Påbyggnad). De resterande kapitlen kan du skumma igenom  någorlunda kvickt, för att få en ungefärlig uppfattning av innehållet.
