Replaced Java NewtonRaphson with Scala.

--- a/lab-instructions/modules/latex/example/latexlosning.tex
+++ b/lab-instructions/modules/latex/example/latexlosning.tex
@@ -18,7 +18,6 @@
 \usepackage{graphicx}
 
 
-
 \title{Newton-Raphsons metod}
 \author{Per Holm}
 \date{21 maj 2001}           % OBS! Vet inte när Per skrev dokumentet, jag hittade på ett datum.
@@ -121,7 +120,8 @@ i figur~\ref{konvbild}.
 
 
 
-\section{Newton-Raphsons metod i Java}
+% \section{Newton-Raphsons metod i Java}
+\section{Newton-Raphsons metod i Scala}
 
 Det är inte helt enkelt att implementera Newton-Raphsons metod i ett
 program, åtminstone inte om man kräver att metoden ska fungera i
@@ -130,6 +130,7 @@ den grundläggande algoritmen med: vi har inte tagit hänsyn till
 undantagsfall som finns eller fel som kan inträffa, till exempel
 att derivatan \texttt{fprim(x0)} blir nära noll (se avsnitt~\ref{sec:konv}).
 
-\VerbatimInput{NewtonRaphson.java}
+% \VerbatimInput{NewtonRaphson.java}
+\VerbatimInput{NewtonRaphson.scala}
 
 \end{document}               % Slut på dokumentet
